projects/compiler/test/parser/functiondecl_error_bad_variadic.out
Error at %FILE_NAME%:1:11
Unexpected token '+', expected 'identifier':
  |  func foo(*+items: A[]) {}
               ^